# refraction

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake.yml
example/: CMakeLists.txt
example/readme/: CMakeLists.txt  readme.cpp
example/serializing/: CMakeLists.txt  serializing.cpp
include/bj/refraction/: nameit.hpp  nameof.hpp  refractor.hpp
tests/: CMakeLists.txt  SomeClass.hpp  animals.cpp  animals.hpp  animals_auto.cpp  animals_auto.hpp  basic.cpp  crc.cpp  main.cpp  nomacro.cpp  voider.cpp
